config: MongoDB configured with Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,47 @@
-version: "3.9"
-
+version: "3"
 services:
-  db:
-    container_name: "msngr-db"
-    image: mongo:6-jammy
-    ports:
-      - "27017:27017"
+  mongodb1:
+    image: mongo:latest
+    networks:
+      - alphanetwork
     volumes:
       - ./docker/mongodb:/data/db
+      - config1:/data/configdb
+    ports:
+      - 30001:27017
+    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0"]
+
+  mongodb2:
+    image: mongo:latest
+    networks:
+      - alphanetwork
+    ports:
+      - 30002:27017
+    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0"]
+
+  mongodb3:
+    image: mongo:latest
+    networks:
+      - alphanetwork
+    ports:
+      - 30003:27017
+    entrypoint: ["/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0"]
+
+  mongoclient:
+    image: mongo
+    networks:
+      - alphanetwork
+    volumes:
+      - ./docker:/deployment_scripts
+    depends_on:
+      - mongodb1
+      - mongodb2
+      - mongodb3
+    entrypoint:
+      - /deployment_scripts/initiate_replica.sh
+
+networks:
+  alphanetwork:
+
+volumes:
+  config1:
