--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.0",
+    "@types/lodash.merge": "^4.6.7",
     "apollo-server-core": "^3.12.1",
     "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
-    "graphql": "^16.8.0"
+    "graphql": "^16.8.0",
+    "lodash.merge": "^4.6.2",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
