--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/lodash.merge": "^4.6.7",
     "apollo-server-core": "^3.12.1",
     "apollo-server-express": "^3.12.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "lodash.merge": "^4.6.2",
