--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "lodash.merge": "^4.6.2",
+    "next-auth": "4.20.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
