--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/schema": "^10.0.0",
+    "@prisma/client": "^5.2.0",
     "@types/lodash.merge": "^4.6.7",
     "apollo-server-core": "^3.12.1",
     "apollo-server-express": "^3.12.1",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
+    "prisma": "^5.2.0",
     "typescript": "^5.2.2"
   }
 }
