--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.0",
+    "graphql-ws": "^5.14.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
