--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
+    "graphql-ws": "^5.14.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "4.20.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ws": "^8.14.1"
   },
   "devDependencies": {
+    "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
     "typescript": "^5.2.2"
