--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "4.20.1",
