--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "backend",
+  "name": "node-messenger-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "hazadus",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.3",
     "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "^5.2.0",
     "@types/lodash.merge": "^4.6.7",
-    "apollo-server-core": "^3.12.1",
-    "apollo-server-express": "^3.12.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.14.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "4.20.1",
@@ -26,6 +28,7 @@
     "ws": "^8.14.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
     "prisma": "^5.2.0",
