--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "node-messenger-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,15 +11,15 @@
   "dependencies": {
     "@apollo/client": "^3.8.3",
     "@auth/prisma-adapter": "^1.0.2",
-    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.2.0",
-    "@types/node": "20.5.9",
+    "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "date-fns": "^2.30.0",
-    "eslint": "8.48.0",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.0",
