--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,19 @@ services:
     ports:
       - 3000:3000
 
+  api:
+    container_name: api
+    build:
+      context: .
+      dockerfile: ./backend/Dockerfile
+    networks:
+      - alphanetwork
+    ports:
+      - 4000:4000
+    environment:
+      - CLIENT_ORIGIN="http://localhost:3000"
+      - DATABASE_URL="mongodb://mongodb1:27017/messenger?replicaSet=rs0&retryWrites=true&w=majority&directConnection=true"
+
   mongodb1:
     image: mongo:latest
     networks:
