--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "prisma": "^5.2.0"
