refactor: Use single shared Prisma schema for both back and frontend.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,7 @@ FROM node:18-alpine AS base
 
 WORKDIR /app
 
+COPY ./prisma/schema.prisma ./backend/prisma/schema.prisma
 COPY ./backend/src ./backend/src
 COPY ./backend/package.json  ./backend/
 COPY ./backend/package-lock.json  ./backend/
@@ -9,7 +10,7 @@ COPY ./backend/package-lock.json  ./backend/
 # Install backend dependencies
 WORKDIR /app/backend
 RUN npm ci
-RUN npx prisma generate --schema=src/prisma/schema.prisma
+RUN npx prisma generate --schema=./prisma/schema.prisma
 RUN npm install -g ts-node tslib '@types/node'
 
 CMD ["ts-node", "src/server.ts"]
