--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "4.8.0",
     "@sentry/nextjs": "^7.70.0",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -36,6 +36,6 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
-    "prisma": "^5.2.0"
+    "prisma": "4.8.0"
   }
 }
